tests/errors/AssignUndeclaredScalar.imp
VAR
  a
BEGIN
  a := b;
END
